# travis-cmake-st

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  slib.cpp  slib.h
